<resources>
    <string name="app_name">Call Reminder</string>
    <string name="ok">OK</string>
    <string name="app_version">Version: </string>
    <string name="title_exit_dialog">Do you want to exit app?</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="exit">Exit</string>
    <string name="ads_by_adtorque">Ads By AdTorque</string>
    <string name="rate_this_app">Rate this App</string>
    <string name="rate_app_msg">If you enjoy using this app, would you mind taking a moment to rate it? It would not take more than a minute. Thank you for your support!</string>
    <string name="later">Later</string>
    <string name="no_thanks">No, Thanks</string>
    <string name="rate_now">Rate Now</string>
    <string name="call_reminder">Call Reminder</string>
    <string name="title_activity_add_reminder">AddReminderActivity</string>
    <string name="m">M</string>
    <string name="t">T</string>
    <string name="w">W</string>
    <string name="th">Th</string>
    <string name="f">F</string>
    <string name="s">S</string>
    <string name="su">su</string>
    <string name="enter_description_here">Enter description here</string>
    <string name="alarm">Alarm</string>
    <string name="preview">Preview</string>
    <string name="vibrate">Vibrate</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="title_activity_call_log">CallLogActivity</string>
    <string name="forever">Forever</string>
    <string name="yearly">Yearly</string>
    <string name="monthly">Monthly</string>
    <string name="weekly">Weekly</string>
    <string name="daily">Daily</string>
    <string name="doNotrepeat">Do not Repeat</string>
    <string name="noEndDate">No end date</string>
    <string name="onDaysofWeek">On Days Of Week</string>
    <string name="expiresOn">Expires on \u0020</string>
    <string name="select_rington">Select Ringtone</string>
    <string name="donotshow">doNotShow</string>
    <string name="InfoPowerSavingMode">
        If you use BettrySaver apps, Please add Notification Reminder to its IGNORE LIST.
    </string>
    <string name="infoSamsungMarshmallw">
        Samsung : Please open smart Manager > Battery > App Optimization > tap on Detail Button > tap Notification Reminder App > Select Turn off For option.
    </string>
    <string name="infoSamsungNaugat">
        Samsung : Please open Device Maintenance > Battery > Unmonitored apps > tap on Add apps > tap Notification Reminder App > tap to Done.
    </string>
    <string name="splash">splash</string>
    <string name="select_remind_in">Remind in</string>
    <string name="_30_minutes">30 minutes</string>
    <string name="_1_hour">1 hour</string>
    <string name="_15_minutes">15 minutes</string>
    <string name="_10_minutes">10 minutes</string>
    <string name="_5_minutes">5 minutes</string>
    <string name="title_activity_setting">SettingActivity</string>
    <string name="errorMsgEmail">Please enter Name and email id or You Can remove Email Reminder!</string>
    <string name="errorMsgCallReminder">Please enter Name and Number or You can remove Call Reminder!</string>
    <string name="defaultrington">Default RingTone</string>
    <string name="errorMsgSMS">Please enter Name and Number or You can remove SMS Reminder!</string>
    <string name="errorMsgCallNote">Please enter Name, Number and Note or You can remove CallNote!</string>
    <string name="errorMsgMisc">Please enter Note or You can remove Misc Reminder!</string>
    <string name="notifiaction_settings">Notifiaction Settings</string>
    <string name="default_reminder_time">Default Reminder Time</string>
    <string name="share_app">Share App</string>
    <string name="rate_app">Rate App</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="call_note_settings">Call note Settings</string>
    <string name="after_call_window">After Call window</string>
    <string name="title_activity_notification_setting">NotificationSettingActivity</string>
    <string name="reminder_tone">Reminder Tone</string>
    <string name="persistent_notification">Persistent Notification</string>
    <string name="reminder_vibration">Reminder Vibration</string>
    <string name="title_activity_after_call_window">AfterCallWindowActivity</string>
    <string name="show_after_call_window_at_the_end_of_call">Show After Call Window at the end of Call.</string>
    <string name="show_on_lock_screen">Show on Lock Screen</string>
    <string name="title_activity_call_note_setting">CallNoteSettingActivity</string>
    <string name="outgoing_calls">Outgoing Calls</string>
    <string name="incoming_calls">Incoming Calls</string>
    <string name="turn_on_speakerphone_when_edit_call_note">Turn on SpeakerPhone When edit call note</string>
    <string name="speakerphone">SpeakerPhone</string>
    <string name="edit_on_long_press">Edit on Long press</string>
    <string name="display_length">Display Length</string>
    <string name="amount_of_time_display_notes">Amount of time Display notes</string>
    <string name="display_contact_notes_on_outgoing_calls">Display Contact notes on outgoing calls</string>
    <string name="display_contact_notes_on_incoming_calls">Display Contact notes on incoming calls</string>
    <string name="calendar_sync">Calendar Sync</string>
    <string name="display_for_10_seconds">Display for 10 seconds</string>
    <string name="display_for_20_seconds">Display for 20 seconds</string>
    <string name="display_for_30_seconds">Display for 30 seconds</string>
    <string name="duration_of_call">Duration of call</string>
    <string name="dismiss_after_5_seconds">Dismiss after 5 seconds</string>
    <string name="dismiss_after_10_seconds">Dismiss after 10 seconds</string>
    <string name="missed_calls">Missed Calls</string>
    <string name="dismiss_after_call_window">Dismiss After Call Window</string>
    <string name="auto_dismiss_after_call_window">Auto Dismiss After Call Window</string>
    <string name="choose_when_to_show_after_call_window">Choose when to show After Call Window</string>
    <string name="after_call_window_type">After Call Window Type</string>
    <string name="show_after_call_window_over_lock_screen">Show After Call Window Over lock screen.</string>
    <string name="dismiss_after_20_seconds">Dismiss after 20 seconds</string>
    <string name="dismiss_after_30_seconds">Dismiss after 30 seconds</string>
    <string name="do_not_dismiss">Do not Dismiss</string>
    <string name="alert">Alert!</string>
    <string name="do_you_want_to_delete">Do you want to Delete Reminder?</string>
    <string name="do_you_want_to_delete_Call_note">Do you want to Delete Call Note?</string>
    <string name="title_activity_history">HistoryActivity</string>
    <string name="request_code_edit">REQUEST_CODE_EDIT</string>
    <string name="reminderData">REMINDERDATA</string>
    <string name="confirm_msg_text">If unselected Confirm SMS will be sent directly through the application without notification.Normal Sms charge may apply.Are you sure you want to uncheck ?</string>
    <string name="recommend_msg">Recommended : Keep Checked</string>
    <string name="uncheck">UnCheck</string>
    <string name="history">History</string>
    <string name="dialledCall">Dialled Call</string>
    <string name="ReceivedCall">Received Call</string>
    <string name="missedCall">Missed Call</string>
    <string name="Call_log">Call Log</string>
    <string name="shared_intent_to_remove">shareintenttoremove</string>
    <string name="shared_intent_to_remove_value">remove</string>
    <string name="notificationId">notificationId</string>
    <string name="snooze_time">Snooze Time</string>
    <string name="incomingnumber">IncomingNumber</string>
    <string name="incomingname">incomingName</string>
    <string name="incomingphoturi">incomingPhotoUri</string>
    <string name="ring">Ring</string>
    <string name="offhook">OffHook</string>
    <string name="idle">Idle</string>
    <string name="reqcodeafterwindow">ReqCodeAfterWindow</string>
    <string name="remindertype">remindertype</string>
    <string name="ringcallnote">RingCallNote</string>
    <string name="offhookcallnote">offHookCAllnote</string>
    <string name="storage_permission_is_require_to_use_this_application">Storage permission is require To Notification Sound.</string>
    <string name="shareAppText">Share our app and get notes and reminders for calls and message and get free from forgetting things</string>
    <string name="turn_on_mobile_or_wifi_connection_nfor_check_available_update_list">Turn on mobile or wifi connection for speech to text.</string>
    <string name="notification_description">Create today important CallNote and Reminder.</string>
</resources>
