<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_margin="@dimen/tinyPadding"
    android:orientation="vertical"
    app:cardBackgroundColor="@color/color_card_bg"
    app:cardCornerRadius="@dimen/smallPadding"
    app:cardElevation="@dimen/tinyPadding">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/smallPadding">

        <com.gonext.callreminder.utils.view.CustomTextView
            android:id="@+id/rateAppTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/tinyPadding"
            android:text="@string/rate_this_app"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/xLargeSize" />

        <com.gonext.callreminder.utils.view.CustomTextView
            android:id="@+id/tvRateAppMsg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/largePadding"
            android:paddingLeft="@dimen/tinyPadding"
            android:paddingRight="@dimen/tinyPadding"
            android:paddingTop="@dimen/smallPadding"
            android:text="@string/rate_app_msg"
            android:textColor="@color/color1"
            android:textSize="@dimen/extraMediumSize" />

        <RelativeLayout
            android:id="@+id/rlRateButtons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/tinyPadding">

            <com.gonext.callreminder.utils.view.CustomTextView
                android:id="@+id/tvLater"
                style="@style/DialogOptionsBtnStyle"
                android:text="@string/later"
                android:textColor="@color/colorAccent"
                app:custom_font="novecentosanswide_book" />

            <com.gonext.callreminder.utils.view.CustomTextView
                android:id="@+id/tvNoThanx"
                style="@style/DialogOptionsBtnStyle"
                android:layout_toLeftOf="@+id/tvRateNow"
                android:layout_toStartOf="@+id/tvRateNow"
                android:text="@string/no_thanks"
                android:textColor="@color/colorAccent"
                app:custom_font="novecentosanswide_book" />

            <com.gonext.callreminder.utils.view.CustomTextView
                android:id="@+id/tvRateNow"
                style="@style/DialogOptionsBtnStyle"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:paddingLeft="@dimen/smallPadding"
                android:paddingStart="@dimen/smallPadding"
                android:text="@string/rate_now"
                android:textColor="@color/colorPrimary"
                app:custom_font="novecentosanswide_medium" />

        </RelativeLayout>

    </LinearLayout>
</android.support.v7.widget.CardView>