<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/tinyPadding"
        android:orientation="vertical"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="@dimen/smallPadding"
        app:cardElevation="@dimen/tinyPadding"
        app:contentPadding="@dimen/mediumPadding">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/mediumPadding"
            android:padding="@dimen/mediumPadding">

            <com.gonext.callreminder.utils.view.CustomTextView
                android:id="@+id/tvTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/mediumPadding"
                android:text="@string/dismiss_after_call_window"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/largeSize" />

            <LinearLayout
                android:id="@+id/llSnoozeDuration"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvTitle"
                android:layout_gravity="end|center_vertical"
                android:layout_marginRight="@dimen/mediumPadding"
                android:layout_marginTop="@dimen/mediumPadding"
                android:gravity="end|center_horizontal">

                <RadioGroup
                    android:id="@+id/rgLanguage"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <RadioButton
                        android:id="@+id/rb5sec"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:buttonTint="@color/colorPrimary"
                        android:padding="@dimen/mediumPadding"
                        android:text="@string/dismiss_after_5_seconds" />

                    <RadioButton
                        android:id="@+id/rb10sec"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:buttonTint="@color/colorPrimary"
                        android:padding="@dimen/mediumPadding"
                        android:text="@string/dismiss_after_10_seconds" />

                    <RadioButton
                        android:id="@+id/rb20sec"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:buttonTint="@color/colorPrimary"
                        android:padding="@dimen/mediumPadding"
                        android:text="@string/dismiss_after_20_seconds" />

                    <RadioButton
                        android:id="@+id/rb30sec"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:buttonTint="@color/colorPrimary"
                        android:padding="@dimen/mediumPadding"
                        android:text="@string/dismiss_after_30_seconds" />

                    <RadioButton
                        android:id="@+id/rbDonotDismiss"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:buttonTint="@color/colorPrimary"
                        android:checked="true"
                        android:padding="@dimen/mediumPadding"
                        android:text="@string/do_not_dismiss" />
                </RadioGroup>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/llSnoozeDuration"
                android:layout_gravity="end|center_vertical"
                android:layout_marginRight="@dimen/mediumPadding"
                android:layout_marginTop="@dimen/mediumPadding"
                android:gravity="end|center_horizontal">

                <com.gonext.callreminder.utils.view.CustomTextView
                    android:id="@+id/tvCancel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/xxlargePadding"
                    android:layout_marginRight="@dimen/normalPadding"
                    android:layout_marginTop="@dimen/microPadding"
                    android:padding="@dimen/extraMediumPadding"
                    android:text="@string/cancel"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/extraMediumSize" />

                <com.gonext.callreminder.utils.view.CustomTextView
                    android:id="@+id/tvOk"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/microPadding"
                    android:padding="@dimen/extraMediumPadding"
                    android:text="@string/ok"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/extraMediumSize"

                    />
            </LinearLayout>
        </RelativeLayout>
    </android.support.v7.widget.CardView>
</RelativeLayout>